--- a/client/src/components/styles/Navbar.css
+++ b/client/src/components/styles/Navbar.css
@@ -2,9 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    height: 44px;
+    height: fit-content;
     width: 100%;
-    padding: 2%;
+    padding: 1% 2%;
     /* background-color: rgba(255, 255, 255, 0.05); */
     color: var(--navItemsColor) !important;
     backdrop-filter: blur(10px);
@@ -66,3 +66,60 @@
     
     100% {}
 }
+
+.hamburger{
+    background-color: transparent;
+    color: var(--fontColor);
+    font-size: 2rem;
+    border: none;
+    display: none;
+    margin: 0;
+    padding: 2% 1% 2% 2%;
+}
+
+.navButtonsForMobile {
+    position: absolute;
+    list-style: none;
+    transform: scaleY(0);  
+    transform-origin: top;
+    text-align: end;
+    overflow: hidden;
+    top: 40px;
+}
+
+.showMenu{
+    transform: scaleY(1);
+    transition: transform 0.4s;
+}
+
+.hideMenu{
+    transform: scaleY(0);
+    transition: transform 0.4s;
+}
+
+.navButtonsForMobile>li>a{
+    padding: 0 1vw;
+    text-decoration: none;
+    color: var(--fontColor);
+    font-size: 1.rem;
+    font-weight: 800;
+}
+
+.navButtonsForMobile>li{
+    margin: 14% 0;
+}
+
+@media (max-width: 800px) {
+    .hamburger{
+        display: block;
+    }
+
+    .linkContainer{
+        display: none;
+    }
+
+    .navbar .resume{
+        font-size: 1.2rem;
+    }
+}
+
